--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
